
* GITHUB#12058: Fix detection of Hotspot in TestRamUsageEstimator so it works with OpenJ9.
  (Uwe Schindler)

* GITHUB#12046: Out of boundary in CombinedFieldQuery#addTerm. (Lu Xugang)

* GITHUB#12072: Fix exponential runtime for nested BooleanQuery#rewrite when a
  BooleanClause is non-scoring. (Ben Trent)

Optimizations
---------------------
* GITHUB#11738: Optimize MultiTermQueryConstantScoreWrapper when a term is present that matches all
  docs in a segment. (Greg Miller)

* GITHUB#11735: KeywordRepeatFilter + OpenNLPLemmatizer always drops last token of a stream.
  (Luke Kot-Zaniewski)

* GITHUB#11771: KeywordRepeatFilter + OpenNLPLemmatizer sometimes arbitrarily exits token stream.
  (Luke Kot-Zaniewski)

* GITHUB#11803: DrillSidewaysScorer has improved to leverage "advance" instead of "next" where
  possible, and splits out first and second phase checks to delay match confirmation. (Greg Miller)

* GITHUB#11828: Tweak TermInSetQuery "dense" optimization to only require all terms present in a
  given field to match a term (rather than all docs in a segment). This is consistent with
  MultiTermQueryConstantScoreWrapper. (Greg Miller)

* GITHUB#11876: Use ByteArrayComparator to speed up PointInSetQuery in single dimension case.
  (Guo Feng)

* GITHUB#11880: Use ByteArrayComparator to speed up BinaryRangeFieldRangeQuery, RangeFieldQuery
  LatLonPointDistanceFeatureQuery and CheckIndex. (Guo Feng)

* GITHUB#11881: Further optimize drill-sideways scoring by specializing the single dimension case
  and borrowing some concepts from "min should match" scoring. (Greg Miller)

* GITHUB#11884: Simplify the logic of matchAll() in IndexSortSortedNumericDocValuesRangeQuery. (Lu Xugang)

* GITHUB#11895: count() in BooleanQuery could be early quit. (Lu Xugang)

* GITHUB#11972: `IndexSortSortedNumericDocValuesRangeQuery` can now also
  optimize query execution with points for descending sorts. (Adrien Grand)
